fixed overlap

--- a/src/components/pages/SignUp/Form.css
+++ b/src/components/pages/SignUp/Form.css
@@ -1,5 +1,5 @@
 .signup-form {
-  height: 100vh;
+  height: 1000px;
   padding: 100px 0;
 }
 .form-container {
